working syscall hook

--- a/data/types.conf
+++ b/data/types.conf
@@ -1,12 +1,12 @@
 HANDLE = p
-PHANDLE = P
-HANDLE * = P
+PHANDLE = p
+HANDLE * = p
 POBJECT_ATTRIBUTES = x
-PLARGE_INTEGER = Q
-PULARGE_INTEGER = Q
+PLARGE_INTEGER = p
+PULARGE_INTEGER = p
 ULONG = i
-LPCSTR = s
-LPCTSTR = s
+LPCSTR = p
+LPCTSTR = p
 LPWSTR = u
 LPCWSTR = u
 HCRYPTKEY = p
@@ -14,12 +14,12 @@ HCRYPTHASH = p
 BOOL = i
 DWORD = i
 int = i
-int * = I
+int * = p
 FILE_INFORMATION_CLASS = i
 SIZE_T = i
 ACCESS_MASK = x
 PANSI_STRING = o
-PVOID * = P
+PVOID * = p
 HOOKPROC = p
 HINSTANCE = p
 HHOOK = p
@@ -28,29 +28,29 @@ WORD = i
 PWCHAR = u
 UINT = i
 PCWSTR = u
-PCSTR = s
+PCSTR = p
 HINTERNET = p
 PWSTR = u
 INTERNET_PORT = i
 LPCVOID = p
 PVOID = p
 NTSTATUS = x
-PSIZE_T = L
-PULONG = I
-ULONG * = I
+PSIZE_T = p
+PULONG = p
+ULONG * = p
 LPVOID = p
-char * = s
-const char * = s
+char * = p
+const char * = p
 SC_HANDLE = p
 HWND = p
 KEY_INFORMATION_CLASS = i
 KEY_VALUE_INFORMATION_CLASS = i
 HKEY = p
 REGSAM = x
-PHKEY = P
-LPDWORD = I
-LPTSTR = s
-u_long * = I
+PHKEY = p
+LPDWORD = p
+LPTSTR = p
+u_long * = p
 SOCKET = i
 long = i
 BOOLEAN = i
@@ -63,15 +63,15 @@ PIO_STATUS_BLOCK = p
 REFCLSID = c
 HCRYPTPROV = p
 ALG_ID = x
-HCRYPTHASH * = P
-HCRYPTKEY * = P
+HCRYPTHASH * = p
+HCRYPTKEY * = p
 REFIID = c
 HMENU = p
-HCRYPTPROV * = P
+HCRYPTPROV * = p
 bson * = z
 USHORT = i
 HCERTSTORE = p
-LPSTR = s
+LPSTR = p
 GET_FILEEX_INFO_LEVELS = i
 INTERNET_STATUS_CALLBACK = p
 const wchar_t * = u
@@ -87,3 +87,134 @@ SHUTDOWN_ACTION = i
 uintptr_t = l
 const VARIANT * = v
 JOBOBJECTINFOCLASS = i
+BYTE * = p
+CABINETSTATE * = p
+const ADDRINFOA * = p
+const ADDRINFOW * = p
+const BYTE * = p
+const BYTE ** = p
+const CONTEXT * = p
+const DVTARGETDEVICE * = p
+const SERVICE_TABLE_ENTRYW * = p
+const struct sockaddr * = p
+const struct timeval * = p
+const void * = p
+const VOID * = p
+CONTEXT * = p
+COSERVERINFO * = p
+CRYPTPROTECT_PROMPTSTRUCT * = p
+DATA_BLOB * = p
+DWORD * = p
+DWORD_PTR = p
+EXCEPTION_RECORD * = p
+fd_set * = p
+FILETIME * = p
+FINDEX_INFO_LEVELS = p
+FINDEX_SEARCH_OPS = p
+GROUP = p
+HDC = p
+IEnumWbemClassObject ** = p
+INT = p
+IStorage * = p
+IUnknown * = p
+IWbemCallResult ** = p
+IWbemClassObject * = p
+IWbemClassObject ** = p
+IWbemContext * = p
+IWbemObjectSink * = p
+IWbemServices * = p
+LARGE_INTEGER = p
+LPARAM = p
+LPBOOL = p
+LPBY_HANDLE_FILE_INFORMATION = p
+LPBYTE = p
+LPBYTE * = p
+LPCONDITIONPROC = p
+LPCONTEXT = p
+LPCTSTR * = p
+LPDRAWTEXTPARAMS = p
+LPENUM_SERVICE_STATUS = p
+LPFILETIME = p
+LPINT = p
+LPMEMORYSTATUSEX = p
+LPMEMORYSTATUS = p
+LPMODULEENTRY32W = p
+LPOLESTREAM = p
+LPOVERLAPPED = p
+LPPOINT = p
+LPPROCESSENTRY32W = p
+LPPROCESS_INFORMATION = p
+LPPROC_THREAD_ATTRIBUTE_LIST = p
+LPPROGRESS_ROUTINE = p
+LPQOS = p
+LPRECT = p
+LPSECURITY_ATTRIBUTES = p
+LPSERVICE_STATUS = p
+LPSTARTUPINFO = p
+LPSYSTEM_INFO = p
+LPSYSTEMTIME = p
+LPTHREADENTRY32 = p
+LPTIME_ZONE_INFORMATION = p
+LPTOP_LEVEL_EXCEPTION_FILTER = p
+LPTRANSMIT_FILE_BUFFERS = p
+LPUNKNOWN = p
+LPURL_COMPONENTSA = p
+LPURL_COMPONENTSW = p
+LPVOID * = p
+LPWSABUF = p
+LPWSADATA = p
+LPWSAOVERLAPPED_COMPLETION_ROUTINE = p
+LPWSAOVERLAPPED = p
+LPWSAPROTOCOL_INFO = p
+LPWSTR * = p
+MULTI_QI * = p
+PACTCTX = p
+PADDRINFOA * = p
+PADDRINFOW * = p
+PBYTE = p
+PCCERT_CONTEXT * = p
+PCLIENT_ID = p
+PCONTEXT = p
+PCRYPT_DECODE_PARA = p
+PCRYPT_DECRYPT_MESSAGE_PARA = p
+PCRYPT_ENCRYPT_MESSAGE_PARA = p
+PCRYPT_HASH_MESSAGE_PARA = p
+PCRYPT_VERIFY_MESSAGE_PARA = p
+PDNS_RECORD * = p
+PDWORD = p
+PFILETIME = p
+PINITIAL_TEB = p
+PIO_APC_ROUTINE = p
+PIP_ADAPTER_ADDRESSES = p
+PIP_ADAPTER_INFO = p
+PIP_INTERFACE_INFO = p
+PKEY_VALUE_ENTRY = p
+PLONG = p
+PLUID = p
+PNETSETUP_JOIN_STATUS = p
+PPS_ATTRIBUTE_LIST = p
+PPS_CREATE_INFO = p
+PRTL_USER_PROCESS_INFORMATION = p
+PRTL_USER_PROCESS_PARAMETERS = p
+PSecBufferDesc = p
+PSECURITY_DESCRIPTOR = p
+PSID_NAME_USE = p
+PSID = p
+PUCHAR = p
+PUNICODE_STRING = p
+PVECTORED_EXCEPTION_HANDLER = p
+PWORD = p
+SAFEARRAY * = p
+SAFEARRAY ** = p
+SHELLEXECUTEINFOW * = p
+SIZE_T * = p
+SOLE_AUTHENTICATION_SERVICE * = p
+struct sockaddr * = p
+uint8_t * = p
+ULONG_PTR = p
+UUID * = p
+VARIANT * = p
+VAR * = p
+WNDENUMPROC = p
+WPARAM = p
+const BYTE * = p
