changed types so that pointers are logged as ints

--- a/data/types.conf
+++ b/data/types.conf
@@ -1,12 +1,12 @@
 HANDLE = p
-PHANDLE = p
-HANDLE * = p
+PHANDLE = P
+HANDLE * = P
 POBJECT_ATTRIBUTES = x
-PLARGE_INTEGER = p
-PULARGE_INTEGER = p
+PLARGE_INTEGER = Q
+PULARGE_INTEGER = Q
 ULONG = i
-LPCSTR = p
-LPCTSTR = p
+LPCSTR = s
+LPCTSTR = s
 LPWSTR = u
 LPCWSTR = u
 HCRYPTKEY = p
@@ -14,12 +14,12 @@ HCRYPTHASH = p
 BOOL = i
 DWORD = i
 int = i
-int * = p
+int * = I
 FILE_INFORMATION_CLASS = i
 SIZE_T = i
 ACCESS_MASK = x
 PANSI_STRING = o
-PVOID * = p
+PVOID * = P
 HOOKPROC = p
 HINSTANCE = p
 HHOOK = p
@@ -28,29 +28,29 @@ WORD = i
 PWCHAR = u
 UINT = i
 PCWSTR = u
-PCSTR = p
+PCSTR = s
 HINTERNET = p
 PWSTR = u
 INTERNET_PORT = i
 LPCVOID = p
 PVOID = p
 NTSTATUS = x
-PSIZE_T = p
-PULONG = p
-ULONG * = p
+PSIZE_T = L
+PULONG = I
+ULONG * = I
 LPVOID = p
-char * = p
-const char * = p
+char * = s
+const char * = s
 SC_HANDLE = p
 HWND = p
 KEY_INFORMATION_CLASS = i
 KEY_VALUE_INFORMATION_CLASS = i
 HKEY = p
 REGSAM = x
-PHKEY = p
-LPDWORD = p
-LPTSTR = p
-u_long * = p
+PHKEY = P
+LPDWORD = I
+LPTSTR = s
+u_long * = I
 SOCKET = i
 long = i
 BOOLEAN = i
@@ -63,15 +63,15 @@ PIO_STATUS_BLOCK = p
 REFCLSID = c
 HCRYPTPROV = p
 ALG_ID = x
-HCRYPTHASH * = p
-HCRYPTKEY * = p
+HCRYPTHASH * = P
+HCRYPTKEY * = P
 REFIID = c
 HMENU = p
-HCRYPTPROV * = p
+HCRYPTPROV * = P
 bson * = z
 USHORT = i
 HCERTSTORE = p
-LPSTR = p
+LPSTR = s
 GET_FILEEX_INFO_LEVELS = i
 INTERNET_STATUS_CALLBACK = p
 const wchar_t * = u
